--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ itertools = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_ignored = "0.1"
+
+[dev-dependencies]
+assert_approx_eq = "1.1"
