--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ serde_ignored = "0.1"
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
+
+[dev-dependencies.cargo-husky]
+version = "1.5"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
