--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "keyset-rs"
 version = "0.1.0"
 authors = ["Lucas <7199136+staticintlucas@users.noreply.github.com>"]
 edition = "2018"
+description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/staticintlucas/keyset-rs"
+keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
+categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
 
 [lib]
 crate-type = ["rlib"]
