--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,7 +79,7 @@ jobs:
           RUSTFLAGS: -Zinstrument-coverage
           LLVM_PROFILE_FILE: keyset-rs-%p-%m.profraw
       - name: Run grcov
-        run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --excl-line '^\s*#\[derive\([\w, ]*\)\]$'
+        run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --ignore '/*' --excl-line '^\s*#\[derive\([\w, ]*\)\]$'
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1
         with:
