--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
           command: test
           args: --all
         env:
-          RUSTFLAGS: -Zinstrument-coverage
+          RUSTFLAGS: -Zinstrument-coverage -Clink-dead-code
           LLVM_PROFILE_FILE: keyset-rs-%p-%m.profraw
       - name: Run grcov
         run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --ignore '/*' --excl-line '^\s*#\[derive\([\w, ]*\)\]$'
