--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: [stable, 1.48.0]
+        rust: [stable, 1.41.1]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -79,7 +79,7 @@ jobs:
           RUSTFLAGS: -Zinstrument-coverage -Clink-dead-code
           LLVM_PROFILE_FILE: keyset-rs-%p-%m.profraw
       - name: Run grcov
-        run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --ignore '/*' --excl-line '^\s*#\[derive\([\w, ]*\)\]$'
+        run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --ignore '/*' --excl-line '^\s*#\[derive\([\w, ]*\)\]$' --excl-line '^\s*unreachable!\(\);?$'
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1
         with:
