--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ crate-type = ["rlib"]
 itertools = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+interp = "0.1"
+toml = "0.5"
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
+maplit = "1.0"
