--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 interp = "0.1"
 toml = "0.5"
+maplit = "1.0"
+svg = "0.10"
+# ttf-parser = "0.12"
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
-maplit = "1.0"
