--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "keyset-rs"
 version = "0.1.0"
-authors = ["Lucas <7199136+staticintlucas@users.noreply.github.com>"]
-edition = "2018"
-rust-version = "1.53"
+authors = ["Lucas Jansen <7199136+staticintlucas@users.noreply.github.com>"]
+edition = "2021"
+rust-version = "1.56"
 description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/staticintlucas/keyset-rs"
