--- a/deny.toml
+++ b/deny.toml
@@ -91,6 +91,7 @@ allow = [
 
     "MIT",
     "Apache-2.0",
+    "Unicode-DFS-2016", # Used by unicode-ident for data files
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
