--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -17,7 +17,7 @@ jobs:
           override: true
           components: rustfmt, clippy
       - name: Run pre-commit
-        uses: pre-commit/action@v2.0.2
+        uses: pre-commit/action@v3.0.0
         with:
           extra_args: --all-files
       - name: Run cargo-deny
@@ -32,7 +32,7 @@ jobs:
         rust: [stable, 1.60.0]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -43,7 +43,6 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release
         env:
           RUSTFLAGS: -D warnings
       - name: Run cargo test
@@ -58,14 +57,14 @@ jobs:
     needs: [lint, test]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
-          components: llvm-tools-preview
           override: true
+          components: llvm-tools
       - name: Setup grcov
         uses: actions-rs/install@v0.1
         with:
@@ -80,8 +79,18 @@ jobs:
           RUSTFLAGS: -Cinstrument-coverage
           LLVM_PROFILE_FILE: keyset-rs-%p-%m.profraw
       - name: Run grcov
-        run: grcov . -s . -b ./target/debug/ -t lcov --branch --llvm --ignore-not-existing -o ./lcov.info --ignore '/*' --excl-line '^\s*(#\[derive\([\w, ]*\)\]|unreachable!\(\);?)$'
+        run: >-
+          grcov .
+          --source-dir .
+          --binary-path ./target/debug/
+          --output-type lcov
+          --branch
+          --llvm
+          --ignore-not-existing
+          --output-path ./lcov.info
+          --ignore '/*'
+          --excl-line '^\s*(#\[derive\([\w, ]*\)\]|unreachable!\(\);?)$'
       - name: Upload to codecov.io
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           file: lcov.info
