Update pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,25 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
-    hooks:
-    -   id: check-added-large-files
-    -   id: check-json
-    -   id: check-toml
-    -   id: check-xml
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: fix-byte-order-marker
-    -   id: mixed-line-ending
-        args: [--fix=lf]
-    -   id: trailing-whitespace
--   repo: https://github.com/doublify/pre-commit-rust
-    rev: v1.0
-    hooks:
-    -   id: fmt
-        args: [--all, --, --check]
-    -   id: cargo-check
-    -   id: clippy
-        args: [--, -D, warnings]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  - id: check-added-large-files
+  - id: check-json
+  - id: check-toml
+  - id: check-xml
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: fix-byte-order-marker
+  - id: mixed-line-ending
+    args: [--fix=lf]
+  - id: trailing-whitespace
+- repo: https://github.com/doublify/pre-commit-rust
+  rev: v1.0
+  hooks:
+  - id: fmt
+    args: [--all, --, --check]
+    pass_filenames: false
+  - id: cargo-check
+    pass_filenames: false
+  - id: clippy
+    args: [--, -D, warnings]
+    pass_filenames: false
