--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,12 @@ crate-type = ["rlib"]
 itertools = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-interp = "0.1"
+interp = { version = "1.0", features = ["interp_array"] }
 toml = "0.7"
 maplit = "1.0"
 svg = "0.13"
 rgb = "0.8"
+array-init = "2.0"
 # ttf-parser = "0.12"
 
 [dev-dependencies]
