Properly draw stepped caps and ISO enter

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
           --ignore-not-existing
           --output-path ./lcov.info
           --ignore '/*'
-          --excl-line '^\s*(#\[derive\([\w, ]*\)\]|unreachable!\(\);?)$'
+          --excl-line '(^\s*#\[derive\([\w, ]*\)\]|unreachable!\(\))'
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
