--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,11 @@ repos:
   - id: clippy
     args: [--, -D, warnings]
     pass_filenames: false
+- repo: local
+  hooks:
+  - id: cargo-test
+    name: cargo test
+    entry: cargo test
+    language: system
+    types: [rust]
+    pass_filenames: false
