Don't pass filenames to cargo fmt in pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
   hooks:
   - id: fmt
     args: [--all, --, --check]
+    pass_filenames: false
   - id: cargo-check
   - id: clippy
     args: [--, -D, warnings]
