--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "keyset-rs"
+name = "keyset"
 version = "0.1.0"
 authors = ["Lucas Jansen <7199136+staticintlucas@users.noreply.github.com>"]
 edition = "2021"
