--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "keyset"
-version = "0.1.0-alpha0"
+version = "0.1.0"
 authors = ["Lucas Jansen"]
 edition = "2021"
 rust-version = "1.60"
