--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ itertools = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 interp = { version = "1.0", features = ["interp_array"] }
-toml = "0.7"
+toml = ">0.7.0,<=0.7.3" # 0.7.4 depends on toml_edit 0.19.9
+toml_edit = "<=0.19.8" # toml_edit bumped MSRV in 0.19.9
 maplit = "1.0"
 svg = "0.13"
 rgb = "0.8"
