--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "keyset"
 version = "0.1.1"
 authors = ["Lucas Jansen"]
 edition = "2021"
-rust-version = "1.60"
+rust-version = "1.64"
 description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/staticintlucas/keyset-rs"
@@ -15,8 +15,7 @@ itertools = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 interp = { version = "1.0", features = ["interp_array"] }
-toml = ">0.7.0,<=0.7.3" # 0.7.4 depends on toml_edit 0.19.9
-toml_edit = "<=0.19.8" # toml_edit bumped MSRV in 0.19.9
+toml = "0.7"
 maplit = "1.0"
 svg = "0.13"
 rgb = "0.8"
