--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities", "graphics", "multimedia::images", "rende
 [dependencies]
 interp = { version = "1.0", features = ["interp_array"] }
 itertools = "0.10"
+kle-serial = { git = "https://github.com/staticintlucas/kle-serial-rs", rev = "fd7cc33" }
 log = "0.4"
 rgb = { version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
