--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-utilities", "graphics", "multimedia::images", "rende
 interp = { version = "1.0", features = ["interp_array"] }
 itertools = "0.10"
 kle-serial = "0.2"
+kurbo = "0.9"
 log = "0.4"
 rgb = { version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
