--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rgb = { version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 svg = "0.13"
+tiny-skia = "0.11"
 toml = { version = "0.7", default-features = false, features = ["parse"] }
 ttf-parser = { version = "0.18", default-features = false, features = ["std"] }
 
