--- a/deny.toml
+++ b/deny.toml
@@ -92,6 +92,8 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Unicode-DFS-2016", # Used by unicode-ident for data files
+    "BSD-2-Clause", # Used by arrayref
+    "BSD-3-Clause", # Used by tiny-skia
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
