--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ ttf-parser = { version = "0.18", default-features = false, features = ["std"] }
 assert_approx_eq = "1.1"
 assert_matches = "1.5"
 maplit = "1.0"
+unindent = "0.2"
