--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,5 +80,6 @@ jobs:
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: lcov.info
           fail_ci_if_error: true
