--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,14 @@
-[package]
-name = "keyset"
+[workspace]
+members = [
+  "keyset",
+  "keyset-core",
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.2.1"
 authors = ["Lucas Jansen"]
 edition = "2021"
 rust-version = "1.65"
-description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
-license = "MIT OR Apache-2.0"
 repository = "https://github.com/staticintlucas/keyset-rs"
-keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
-categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
-
-[dependencies]
-interp = { version = "1.0", features = ["interp_array"] }
-itertools = "0.10"
-kle-serial = "0.2"
-kurbo = "0.9"
-log = "0.4"
-miniz_oxide = "0.7"
-pdf-writer = "0.8"
-rgb = { version = "0.8", default-features = false }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
-serde_json = "1.0"
-svg = "0.13"
-tiny-skia = "0.11"
-toml = { version = "0.7", default-features = false, features = ["parse"] }
-ttf-parser = { version = "0.18", default-features = false, features = ["std"] }
-
-[dev-dependencies]
-assert_approx_eq = "1.1"
-assert_matches = "1.5"
-maplit = "1.0"
-unindent = "0.2"
+license = "MIT OR Apache-2.0"
