--- a/keyset/Cargo.toml
+++ b/keyset/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "keyset"
+version = "0.2.1"
 description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
 keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
 categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
 
-version.workspace = true
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -12,4 +12,5 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-keyset-core = { path = "../keyset-core", version = "0.2.1" }
+color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0" }
+core = { package = "keyset-core", path = "../keyset-core", version = "0.2.1" }
