--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,11 @@ repos:
   hooks:
   - id: check-added-large-files
   - id: check-json
+  - id: check-symlinks
   - id: check-toml
   - id: check-xml
   - id: check-yaml
+  - id: destroyed-symlinks
   - id: end-of-file-fixer
   - id: fix-byte-order-marker
   - id: mixed-line-ending
