Make sure to test all features

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
   - id: cargo-test
     name: cargo test
     entry: cargo test
+    args: [--all-features]
     language: system
     types: [rust]
     pass_filenames: false
