--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           RUSTFLAGS: -D warnings
       - name: Run cargo test
-        run: cargo test
+        run: cargo test --all-features
 
   coverage:
     name: Test coverage
@@ -59,7 +59,7 @@ jobs:
       - name: Setup grcov
         run: cargo install grcov
       - name: Run cargo test
-        run: cargo test --lib
+        run: cargo test --lib --all-features
         env:
           RUSTFLAGS: -Cinstrument-coverage
           LLVM_PROFILE_FILE: keyset-rs-%p-%m.profraw
