--- a/keyset-core/Cargo.toml
+++ b/keyset-core/Cargo.toml
@@ -16,11 +16,11 @@ license.workspace = true
 
 [dependencies]
 color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb", "tiny-skia"] }
+geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
 key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0", features = ["kle"] }
 
 interp = { version = "1.0", features = ["interp_array"] }
 itertools = "0.10"
-kurbo = "0.9"
 log = "0.4"
 miniz_oxide = "0.7"
 pdf-writer = "0.8"
