--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -18,10 +18,10 @@ license.workspace = true
 kle = ["kle-serial", "serde_json"]
 
 [dependencies]
-color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb"]}
+color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb"] }
+geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
 
 kle-serial = { version = "0.2", optional = true }
-kurbo = "0.9"
 serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
