--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -16,7 +16,7 @@ license.workspace = true
 
 [features]
 toml = ["serde", "dep:toml"]
-# json = ["serde", "serde_json"]
+json = ["serde", "serde_json"]
 
 [dependencies]
 color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb"] }
@@ -26,7 +26,7 @@ key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0" }
 interp = { version = "1.0", features = ["interp_array"] }
 itertools = "0.10"
 serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
-# serde_json = { version = "1.0", optional = true }
+serde_json = { version = "1.0", optional = true }
 toml = { version = "0.7", default-features = false, features = ["parse"], optional = true }
 
 [dev-dependencies]
