--- a/keyset-core/Cargo.toml
+++ b/keyset-core/Cargo.toml
@@ -16,6 +16,7 @@ license.workspace = true
 
 [dependencies]
 color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb", "tiny-skia"] }
+font = { package = "keyset-font", path = "../keyset-font", version = "0.1.0" }
 geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
 key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0", features = ["kle"] }
 profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.1.0", features = ["toml"] }
