Add example program

--- a/keyset/Cargo.toml
+++ b/keyset/Cargo.toml
@@ -13,7 +13,10 @@ license.workspace = true
 
 [dependencies]
 color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0" }
-drawing = { package = "keyset-drawing", path = "../keyset-drawing", version = "0.1.0", features = ["pdf", "png", "svg"]}
+drawing = { package = "keyset-drawing", path = "../keyset-drawing", version = "0.1.0", features = ["pdf", "png", "svg"] }
 font = { package = "keyset-font", path = "../keyset-font", version = "0.1.0" }
-key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0" }
-profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.1.0" }
+key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0", features = ["kle"] }
+profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.1.0", features = ["toml"] }
+
+[dev-dependencies]
+fontdb = "0.14"
