--- a/deny.toml
+++ b/deny.toml
@@ -94,6 +94,7 @@ allow = [
     "Unicode-DFS-2016", # Used by unicode-ident for data files
     "BSD-2-Clause", # Used by arrayref
     "BSD-3-Clause", # Used by tiny-skia
+    "Zlib", # Used by slotmap (dependency of fontdb)
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
@@ -215,7 +216,7 @@ unknown-git = "deny"
 # if not specified. If it is specified but empty, no registries are allowed.
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
 # List of URLs for allowed Git repositories
-allow-git = ["https://github.com/staticintlucas/kle-serial-rs"]
+allow-git = []
 
 [sources.allow-org]
 # 1 or more github.com organizations to allow git sources for
