--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Python dependencies
+        run: pip install -r requirements.txt
       - name: Setup toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
@@ -33,6 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Python dependencies
+        run: pip install -r requirements.txt
       - name: Setup toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
@@ -51,6 +55,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Python dependencies
+        run: pip install -r requirements.txt
       - name: Setup toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
