Implement lazy font loading

--- a/keyset-font/Cargo.toml
+++ b/keyset-font/Cargo.toml
@@ -21,7 +21,8 @@ geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
 
 byte-strings = "0.3"
 log = "0.4"
-owned_ttf_parser = { version = "0.19", default-features = false, features = ["std"] }
+ouroboros = "0.18"
+ttf-parser = { version = "0.20", default-features = false, features = ["std"]}
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
