Ensure docs.rs enables all features for all crates

--- a/keyset-color/Cargo.toml
+++ b/keyset-color/Cargo.toml
@@ -8,6 +8,8 @@ description = "Color type and conversions for keyset"
 keywords = ["keyset"]
 categories = ["none"]
 
+metadata.docs.rs.all-features = true
+
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -20,6 +22,3 @@ rgb = { version = "0.8", default-features = false, optional = true }
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
-
-[package.metadata.docs.rs]
-all-features = true
