--- a/keyset-font/Cargo.toml
+++ b/keyset-font/Cargo.toml
@@ -8,6 +8,8 @@ description = "Font type and functionality for keyset"
 keywords = ["keyset"]
 categories = ["none"]
 
+metadata.docs.rs.all-features = true
+
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -27,6 +29,3 @@ ttf-parser = { version = "0.20", default-features = false, features = ["std"]}
 [dev-dependencies]
 assert_approx_eq = "1.1"
 assert_matches = "1.5"
-
-[package.metadata.docs.rs]
-all-features = true
