Properly disallow multiple crate versions; remove exceptions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,8 @@ jobs:
           SKIP: cargo-test
       - name: Run cargo-deny
         uses: EmbarkStudios/cargo-deny-action@v1
+        with:
+          arguments: --workspace --all-features
 
   test:
     name: Build & Test
