--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
 name = "keyset-drawing"
-version = "0.1.0"
 description = "Drawing output functionality for keyset"
 
 # We don't really care about SEO for this crate, but Clippy complains if we
@@ -10,6 +9,7 @@ categories = ["none"]
 
 metadata.docs.rs.all-features = true
 
+version.workspace = true
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -22,11 +22,11 @@ png = ["tiny-skia", "color/tiny-skia"]
 svg = ["dep:svg"]
 
 [dependencies]
-color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0" }
-font = { package = "keyset-font", path = "../keyset-font", version = "0.1.0" }
-geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
-key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0" }
-profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.1.0" }
+color = { package = "keyset-color", path = "../keyset-color", version = "0.2.1" }
+font = { package = "keyset-font", path = "../keyset-font", version = "0.2.1" }
+geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.2.1" }
+key = { package = "keyset-key", path = "../keyset-key", version = "0.2.1" }
+profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.2.1" }
 
 log = "0.4"
 miniz_oxide = { version = "0.7", optional = true }
