Install TTX in virtualenv in build.rs, removing need for user to install dependencies

--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -37,3 +37,6 @@ svg = { version = "0.14", optional = true }
 [dev-dependencies]
 assert_approx_eq = "1.1"
 unindent = "0.2"
+
+[build-dependencies]
+which = "6.0"
