--- a/.deny.toml
+++ b/.deny.toml
@@ -193,6 +193,15 @@ deny = [
 # Certain crates/versions that will be skipped when doing duplicate detection.
 skip = [
     #{ name = "ansi_term", version = "=0.11.0" },
+    # TODO remove this when pdf-writer and png both update to latest
+    { name = "bitflags", version = "=1.3.2" },
+    # TODO remove all these when new parking_lot_core is released
+    { name = "windows-targets", version = "=0.48.5" },
+    { name = "windows_aarch64_msvc", version = "=0.48.5" },
+    { name = "windows_i686_gnu", version = "=0.48.5" },
+    { name = "windows_i686_msvc", version = "=0.48.5" },
+    { name = "windows_x86_64_gnu", version = "=0.48.5" },
+    { name = "windows_x86_64_msvc", version = "=0.48.5" },
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate
 # detection. Unlike skip, it also includes the entire tree of transitive
