--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -17,7 +17,7 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-kurbo = "0.11"
+euclid = "0.22"
 
 [dev-dependencies]
 assert_approx_eq = "1.1"
