--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -27,5 +27,6 @@ kle-serial = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
+assert_approx_eq = "1.1"
 assert_matches = "1.5"
 unindent = "0.2"
