--- a/keyset-color/Cargo.toml
+++ b/keyset-color/Cargo.toml
@@ -17,8 +17,9 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+isclose = { git = "https://github.com/staticintlucas/isclose", branch = "main", features = ["euclid"] }
 tiny-skia = { version = "0.11", default-features = false, features = ["std"], optional = true }
 rgb = { version = "0.8", default-features = false, optional = true }
 
 [dev-dependencies]
-assert_approx_eq = "1.1"
+geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.3.2" }
