--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -32,6 +32,6 @@ serde_json = { version = "1.0", optional = true }
 toml = { version = "0.8", default-features = false, features = ["parse"], optional = true }
 
 [dev-dependencies]
-assert_approx_eq = "1.1"
 assert_matches = "1.5"
+isclose = { git = "https://github.com/staticintlucas/isclose", branch = "main", features = ["euclid"] }
 unindent = "0.2"
