--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -18,6 +18,6 @@ license.workspace = true
 
 [dependencies]
 euclid = "0.22"
-isclose = { git = "https://github.com/staticintlucas/isclose", branch = "main", features = ["euclid"] }
+isclose = { version = "0.1", features = ["euclid"] }
 
 [dev-dependencies]
