--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -28,5 +28,5 @@ serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5"
-isclose = { git = "https://github.com/staticintlucas/isclose", branch = "main", features = ["euclid"] }
+isclose = { version = "0.1", features = ["euclid"] }
 unindent = "0.2"
